--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profil">
       <img src="photo" alt="me">
       <h2>Ahoj.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, děi conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p class="zac">Lorem ipsum dolor sit amet, vitae volutpat, děi conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </nav>
     <hr>
     <article>
@@ -44,7 +44,7 @@
     <div class="kontakt">
       <h2>kontakt</h2>
       <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <p class="zprava">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
       <a class="mail" href="mailto:filip.milfait@seznam.cz">kontakt</a>
     </div>
 
@@ -55,7 +55,7 @@
     <br>
     <a href="https://www.freepik.com/vectors/web">Web vector created by stories - www.freepik.com</a>
     <a href='https://www.freepik.com/vectors/business'>Business vector created by vectorjuice - www.freepik.com</a>
-    <p>© 2020 Filip Milfait</p>
+    <p class="copyright">© 2020 Filip Milfait</p>
   </footer>
 </body>
 
